/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package vuelosfis.interfaces;

/**
 *
 * @author Diogo
 */
public interface TipoVuelo {
    
}
